Fixes event/talk image height
The height was based on the browser width, and was causing the image to
overlap content on wide screens. This makes the images be a fixed height
and width so the overlap doesn't occur.

--- a/app/styles/components/photo-banner.less
+++ b/app/styles/components/photo-banner.less
@@ -74,8 +74,8 @@
 
   @media (min-width: @screen-sm-min) {
     font-size: 48px;
-    width: 21vw;
-    height: 21vw;
+    width: 250px;
+    height: 250px;
   }
 
   @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -84,6 +84,8 @@
 
   @media (min-width: @screen-lg-min) {
     font-size: 48px;
+    width: 270px;
+    height: 270px;
   }
 }
 
